Umstellung der Finanzgruppen auf den Begriff Konto
VK = Vereinskonto

technisches refactoring von finanzgruppe auf konto kommt später